--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
 title: BY Blog
-SEOTitle: 渃水朦胧的博客 | rsml2233 Blog
+SEOTitle: 渃水朦胧 | rsml2233 Blog
 header-img: img/post-bg-desk.jpg
 email: rsml2233@outlook.com
 description: "El Psy Congroo."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+keyword: "程序猿, 二刺螈, 臭打游戏的, 多少沾一点"
 url: "http://rsml2233.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/rsml2233/rsml2233.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "Talk is cheap, show me your code!"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
