--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: BY Blog
+title: rsml2233 Blog
 SEOTitle: 渃水朦胧 | rsml2233 Blog
 header-img: img/post-bg-desk.jpg
 email: rsml2233@outlook.com
 description: "El Psy Congroo."
-keyword: "程序猿, 二刺螈, 臭打游戏的, 多少沾一点"
+keyword: "Vtuber, Gamer, DD, CXY"
 url: "http://rsml2233.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/rsml2233/rsml2233.github.io.git" # you code repository
