--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: rsml2233 Blog
 SEOTitle: 渃水朦胧 | rsml2233 Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/index-headpage.jpg
 email: rsml2233@outlook.com
 description: "El Psy Congroo."
 keyword: "Vtuber, Gamer, DD, CXY"
